--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=davice-width, initial-scale=1.0">
+
         <title>women's biker store</title>
+    
     </head>
     <body>
 
         <header>
-        <h1>Women's biker store</h1>
+            <link rel="stylesheet" type="text/css" href="./estilos.css" />
+        <h1 style="color:#22045A ;">Women's biker store</h1>
     </header>
     <main>
-        <img src="./moto.jpg" />
+        <img src="fondo.jpg" />
         <section>
         <h2>Tu propio estilo</h2>
 
@@ -32,7 +33,7 @@
     </main>
 </section>
         <h3>Siguenos en</h3>
-        <a href="https://www.instagram.com/garzon.naty?igsh=cDJnczNwM3lhODlw"></a>
+        
         <a href="./contacto.html">Formulario de contacto</a>
         </footer>
     </body>
