--- a/contacto.html
+++ b/contacto.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  
+<head> 
+<meta charset="UTF-8">
      <link rel="stylesheet" type="text/css" href="./estilos.css" />
         <title>Formulario</title>
 </head>
 
 <body>
 
-   <div class="formilario-container">
+   <div class="formulario-container">
      <h2 id="titulo">Formulario de contacto</h2>
      <form>
 
@@ -16,7 +17,7 @@
 <input class="inputs" type="email" name="correo" id="correo" placeholder="Ingrese su Correo Electronico" /> 
 <input class="inputs" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su contraseña">
 <p class="texto">Acepto los <a class="links" href="#">Terminos y Condiciones</a></p>
-<input id="button" type="submit" value="Registrar">
+<input id="button" type="submit" value="Registrar" class="registrar">
 <p class="texto"><a class="links" href="#"> ¿ Ya tengo una cuenta ?</a></p>
 
 <div class="fondo"></div>
