--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-
         <title>women's biker store</title>
-    
+        <link rel="stylesheet" type="text/css" href="./estilos.css" />
     </head>
-    <body>
-
+    <body class="principal">
         <header>
-            <link rel="stylesheet" type="text/css" href="./estilos.css" />
-        <h1 style="color:#22045A ;">Women's biker store</h1>
-    </header>
-    <main>
-        <img src="fondo.jpg" />
-        <section>
-        <h2>Tu propio estilo</h2>
-
-        <div>
-        <p>Este es el listado de accesorios </p>
-
-        <hr />
-       <article>
-         <ul>
-            <li>Cascos</li>
-            <li>Chaquetas</li>
-            <li>Guantes</li>
-        </ul> 
-     </div>
-        </article>
-        <hr />
-
-    </main>
-</section>
+            <h1 style="color:#22045A;">Women's biker store</h1>
+        </header>
+        <main>
+            <div class="fondo">
+            <img  src="fondo.jpg" alt="Descripción de la imagen" class="ancho">
+</div>
+            <section>
+                <h2>Tu propio estilo</h2>
+                <div>
+                    <p>Este es el listado de accesorios</p>
+                    <hr />
+                    <article>
+                        <ul>
+                            <li>Cascos</li>
+                            <li>Chaquetas</li>
+                            <li>Guantes</li>
+                        </ul>
+                    </article>
+                </div>
+                <hr />
+            </section>
+        </main>
         <h3>Siguenos en</h3>
-        
+
         <a href="./contacto.html">Formulario de contacto</a>
-        </footer>
+        <footer></footer>
     </body>
 </html>
